src/objects/echosign_dev1__SIGN_File_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Map_on_Events__c</fullName>
        <label>Map on Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled / Declined</fullName>
                </value>
                <value>
                    <fullName>Out for Approval</fullName>
                </value>
                <value>
                    <fullName>Out for Signature</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Signature</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Form-Filled</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Acceptance</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Form-Filling</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Delivery</fullName>
                </value>
                <value>
                    <fullName>Out for Acceptance</fullName>
                </value>
                <value>
                    <fullName>Out for Form-Filling</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__SIGN_Object_Mapping__c</fullName>
        <label>Adobe Sign Object Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Object_Mapping__c</referenceTo>
        <relationshipLabel>File Mappings</relationshipLabel>
        <relationshipName>File_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed Agreement - Merged PDF</fullName>
                    <default>true</default>
                    <label>Signed Agreement - Merged PDF</label>
                </value>
                <value>
                    <fullName>Signed Agreement - Separate PDFs</fullName>
                </value>
                <value>
                    <fullName>Audit Trail</fullName>
                </value>
                <value>
                    <fullName>Supporting Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Target_Document_Type__c</fullName>
        <label>Target Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>echosign_dev1__Document_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Target_Field_Name__c</fullName>
        <label>Target Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Target_Type__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attach file directly to object</fullName>
                    <default>true</default>
                    <label>Attach file directly to object</label>
                </value>
                <value>
                    <fullName>Add a reference link to the file</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>File Mapping</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>File Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>